# OpenProductivityTracker

./: .gitignore  README.md  build-ios.sh  build.sh  expo_setup_guide.md  package-lock.json  setup-ios-simple.sh  setup-ios-xcframework.sh  setup-ios.sh  setup-native-module.sh  troubleshooting_guide.md  turbo.json
cli/: freelist.db
cli/src/: main.rs
core/: Cargo.toml  build-mobile.sh  cargo_build.txt
core/src/: database.rs  ffi.rs  lib.rs  task.rs  task_list.rs
frontend/: App.tsx  README.md  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/app/(tabs)/: index.tsx  settings.tsx
frontend/components/: NativeModuleTest.tsx
frontend/ios/: FreelistRust.h  FreelistRust.m
frontend/ios/frameworks/FreelistCore.xcframework/: Info.plist
frontend/lib/: .db.ts.swo  FreelistRust.ts  FreelistRustFallback.ts  db.ts
frontend/modules/freelist-rust-bridge/: FreelistRustBridge.podspec  package.json
frontend/modules/freelist-rust-bridge/android/: build.gradle  gradle.properties
frontend/modules/freelist-rust-bridge/example/: app.json  package.json
frontend/modules/freelist-rust-bridge/example/android/: settings.gradle
frontend/modules/freelist-rust-bridge/example/android/app/: build.gradle
frontend/modules/freelist-rust-bridge/example/ios/: Podfile
frontend/modules/freelist-rust-bridge/example/ios/FreelistRustBridgeExample.xcodeproj/: project.pbxproj
frontend/modules/freelist-rust-bridge/ios/: FreelistRustBridge.h  FreelistRustBridge.mm
frontend/modules/freelist-rust-bridge/src/: NativeFreelistRustBridge.ts  index.tsx
(+13 files in other folders)
